# Labs-2-Mosin-Michael

1lab/: CMakeLists.txt  main.cpp  rectangle.hpp  rectangle_calculation.cpp  rectangle_structure.cpp
2lab/: CMakeLists.txt  main.cpp  matrix.hpp  matrix_io.cpp  matrix_structure.cpp
3lab/: CMakeLists.txt  main  main.cpp  string.cpp  string.hpp
4lab/: CMakeCache.txt  CMakeLists.txt  Makefile  bigint.cpp  bigint.hpp  cmake_install.cmake  main  main.cpp  string.cpp  string.hpp
4lab/3lab/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp  string.cpp  string.hpp
5lab/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  matrix.cpp  matrix.hpp
5lab/.cache/clangd/index/: main.cpp.B8F091E7EBA3D8C1.idx  matrix.hpp.891A5ABFDE7316AE.idx
6lab/: CMakeLists.txt  VectorBool.cpp  VectorBool.hpp  main  main.cpp  my_vector.hpp
7lab/: CMakeLists.txt  main.cpp
7lab/.cache/clangd/index/: main.cpp.6FB4F2D2D773BE99.idx  main.cpp.9D365EAC2BDD43DC.idx
8lab/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
